file_list = \
dominoes_macros.h \
dominoes_globals.h \
dominoes_globals.cc \
dominoes.h \
dominoes.cc \
observation.h \
observation.cc \
dominoes_detector.h \
dominoes_detector.cc \
dominoes_module.h \
dominoes_module.cc \
dominoes_config.h \
dominoes_config.cc \
dominoes_detector_api.h \
dominoes_detector_api.cc \
dominoes_timer_thread.h \
dominoes_timer_thread.cc \
lua_rollup_item_wrapper.h \
dominoes_metadata.h \
dominoes_metadata.cc


noinst_LIBRARIES = libdominoes.a
libdominoes_a_SOURCES = $(file_list)

SUBDIRS = \
accumulators \
rollup
